CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)
PROJECT(ZEVENT)
#ADD_SUBDIRECTORY(src bin)

#INSTALL(FILES LICENSE README DESTINATION share/doc/zevent)
INSTALL(FILES config.ini DESTINATION bin)
INSTALL(PROGRAMS runtest.sh DESTINATION bin)
INSTALL(DIRECTORY include/ DESTINATION /usr/local/zevent/include)

