SET(CMAKE_MODULE_PATH "${ZEVENT_SOURCE_DIR}/cmake/modules")

FIND_PACKAGE(APR REQUIRED)
FIND_PACKAGE(APR-UTIL REQUIRED)
IF(APR_FOUND)
	INCLUDE_DIRECTORIES(${APR_INCLUDE_DIR})
	SET(HAVE_LIBPAPR 1)
ENDIF(APR_FOUND)

IF(APR-UTIL_FOUND)
	INCLUDE_DIRECTORIES(${APR-UTIL_INCLUDE_DIR})
	SET(HAVE_LIBAPR-UTIL 1)
ENDIF(APR-UTIL_FOUND)

SET(LIBEVENT_SRC_BUILD 
	ap_hooks.c
	iniparser.c
	dictionary.c
	event.c
	fdqueue.c
	mpm_common.c
	listen.c
	scoreboard.c
	pod.c
	unixd.c
	connection.c
	log.c
	)
SET(SRC main.c
	)

ADD_DEFINITIONS(-D_LARGEFILE64_SOURCE)

SET(INC_DIRS ${ZEVENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${INC_DIRS})

#SET(LINK_DIRS /home/kacha/dev/apr/lib /home/kacha/dev/apr-util/lib)
#LINK_DIRECTORIES(${LINK_DIRS})

SET(BUILD_SHARED_LIBS on)
SET(ZEVENT_LIB zevent)
ADD_LIBRARY(${ZEVENT_LIB} ${LIBEVENT_SRC_BUILD})
TARGET_LINK_LIBRARIES(${ZEVENT_LIB} ${APR_LIBRARIES} ${APR-UTIL_LIBRARIES})

SET_TARGET_PROPERTIES(zevent PROPERTIES VERSION 1.0 SOVERSION 2)

ADD_EXECUTABLE(main ${SRC})

TARGET_LINK_LIBRARIES(main ${ZEVENT_LIB})

INSTALL(TARGETS zevent main RUNTIME DESTINATION bin
	LIBRARY DESTINATION bin)

